# KitchenManager

./: .gitignore  Build.sh  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml
Applications/: CMakeLists.txt
Applications/KitchenManagerViewer/: CMakeLists.txt  GeneratedHeader.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
CMake/: Applications.cmake  Libraries.cmake  Objects.cmake  Widgets.cmake
Libraries/: CMakeLists.txt
Libraries/KmCommon/: CMakeLists.txt  KmCommon.h  KmUtilities.cpp  KmUtilities.h
Objects/: CMakeLists.txt
Objects/KmApiCommunication/: CMakeLists.txt  KmApiCommunication.cpp  KmApiCommunication.h
Tests/: CMakeLists.txt  Main.cpp
Widgets/: CMakeLists.txt
Widgets/KmBaseWidget/: CMakeLists.txt  KmBaseWidget.cpp  KmBaseWidget.h
Widgets/KmMediaPlayerWidget/: CMakeLists.txt  KmMediaPlayerWidget.cpp  KmMediaPlayerWidget.h  KmMediaPlayerWidget.ui
Widgets/KmOrderViewWidget/: CMakeLists.txt  KmOrderViewWidget.cpp  KmOrderViewWidget.h  KmOrderViewWidget.ui
Widgets/KmSessionWidget/: CMakeLists.txt  KmSessionWidget.cpp  KmSessionWidget.h  KmSessionWidget.ui
api/: .env  Cargo.toml  Dockerfile  rustfmt.toml
api/documents/: Order.postman_collection.json  Products.postman_collection.json
api/scripts/: InitializeProducts.py
api/src/: broadcast.rs  common_model.rs  constants.rs  database.rs  main.rs
api/src/orders/: collection.rs  mod.rs  model.rs  service.rs  stream.rs
kitchen-manager/: Dockerfile  package.json
kitchen-manager/src/: Constants.js  index.js
kitchen-manager/src/api/: index.js
kitchen-manager/src/pages/: OrderManager.jsx  OrderView.jsx  index.js
kitchen-manager/src/resources/fonts/: index.js
